fix map and show search on mobile listing page

--- a/src/components/Ethicality/Ethicality.sass
+++ b/src/components/Ethicality/Ethicality.sass
@@ -8,8 +8,8 @@
     fill: $color-inverse
 
 .ethicality-bar
-  background-color: $color-gray-14
-  border-bottom: 1px solid $color-border
+  @media (max-width: $screen-md-max)//{}
+    justify-content: center
 
 .ethicality-toggle
   display: inline-block
