--- a/src/containers/Listing/Listing.sass
+++ b/src/containers/Listing/Listing.sass
@@ -1,5 +1,9 @@
 @import 'variables.sass'
 
+.listing-ethicality-bar
+  background-color: $color-gray-14
+  border-bottom: 1px solid $color-border
+
 .listing-detail
   border: 1px solid $color-border
   border-top: none
